[tool.poetry]
name = "codefind"
version = "0.1.6"
description = "Find code objects and their referents"
authors = ["Olivier Breuleux <breuleux@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.11.1"
ruff = "^0.4.1"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
