[project]
name = "codefind"
version = "0.1.7"
description = "Find code objects and their referents"
authors = [
    { name = "Olivier Breuleux", email = "breuleux@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/breuleux/codefind"
Repository = "https://github.com/breuleux/codefind"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
